# TextPrepper

./: .gitignore  README.md  pyproject.toml
examples/: 00_Basic_usage_of_preprocessors.ipynb  01_How-to_use_processor_in_LCEL.ipynb  02_Translate_Query_to_another_language.ipynb
src/textprepper/: base.py  modifiers.py
tests/: utils.py
tests/base/: test_base_processor.py
tests/modifiers/: skip_mutiplestringreplacer.py  test_addanymetadata.py  test_anytextreplacer.py  test_lowercase.py  test_spellchecking.py  test_uppercase.py
tests/removers/: test_remove_email.py  test_remove_emojis.py  test_remove_header.py  test_remove_htmltags.py  test_remove_hyphens.py  test_remove_newlines.py  test_remove_punctuations.py  test_remove_stopwords.py  test_remove_urls.py  test_remove_whitespace.py
