[tool.poetry]
name = "textprepper"
version = "0.1.0"
description = ""
authors = ["RySE-AI <Ryo.Shibata@outlook.de>"]
readme = "README.md"
packages = [{include = "textprepper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain-core = "^0.1.46"
nltk = "^3.8.1"
spacy = "^3.7.4"
pydantic = "^2.7.1"
pyspellchecker = "^0.8.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.8"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
black = "^24.4.2"


[tool.poetry.group.examples.dependencies]
langchain-community = "^0.0.36"
pypdf = "^4.2.0"
langchain = "^0.1.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
